syntax = "proto3";

option go_package = "examples/loadbalancer";

package loadbalancer;

service Entropy {
  rpc GenerateIntegers (NumberRequest) returns (stream NumberReply);
}

message NumberRequest {
  int32 count = 1;
}

message NumberReply {
  int32 value = 1;
}
